[gd_scene load_steps=6 format=2]

[ext_resource path="res://CardSkillChannel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Taipei-Sans-TC-Beta-Regular-2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SysthesisContainer.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="SysthesisContainer" type="Control"]
margin_right = 1280.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 720 )
theme = SubResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="Panel" parent="."]
margin_left = 265.0
margin_top = 64.0
margin_right = 1015.0
margin_bottom = 256.0
rect_min_size = Vector2( 750, 208 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Output"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Output/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 738.0
margin_bottom = 201.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Output/MarginContainer/VBoxContainer"]
margin_right = 726.0
margin_bottom = 17.0
custom_constants/separation = 32

[node name="Label" type="Label" parent="Output/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
text = "物质"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Output/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 576.0
margin_right = 726.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 10
text = "精神"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Output/MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 726.0
margin_bottom = 189.0
rect_min_size = Vector2( 720, 128 )
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input1" parent="Output/MarginContainer/VBoxContainer/HBoxContainer" groups=["SkillInput"] instance=ExtResource( 2 )]
target_type = "physic"

[node name="Generate" type="Button" parent="Output/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 182.0
margin_top = 72.0
margin_right = 544.0
margin_bottom = 95.0
size_flags_horizontal = 7
size_flags_vertical = 4
text = "合成!"

[node name="Input2" parent="Output/MarginContainer/VBoxContainer/HBoxContainer" groups=["SkillInput"] instance=ExtResource( 2 )]
margin_left = 576.0
margin_right = 726.0
target_type = "mental"

[node name="BottomPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -420.0
margin_right = 1280.0
rect_min_size = Vector2( 1280, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 48
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="BottomPanel/MarginContainer"]
margin_left = 12.0
margin_top = 48.0
margin_right = 1268.0
margin_bottom = 408.0
custom_constants/vseparation = 12
custom_constants/hseparation = 7
columns = 8

[node name="Back" type="Button" parent="BottomPanel"]
margin_left = 576.0
margin_right = 726.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mask" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.596078, 0.596078, 0.596078, 1 )

[node name="Popups" type="CanvasLayer" parent="."]
layer = 10

[connection signal="snap_change" from="Output/MarginContainer/VBoxContainer/HBoxContainer/Input1" to="." method="on_snap_change"]
[connection signal="pressed" from="Output/MarginContainer/VBoxContainer/HBoxContainer/Generate" to="." method="_on_Generate_pressed"]
[connection signal="snap_change" from="Output/MarginContainer/VBoxContainer/HBoxContainer/Input2" to="." method="on_snap_change"]
